--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.kink3d.mirrors": "file:C:/Users/lorel/Downloads/kMirrors-master/kMirrors-master",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.visualeffectgraph": "14.0.11",
     "com.unity.modules.ai": "1.0.0",
