--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "com.kink3d.mirrors": "file:C:/Users/lorel/Downloads/kMirrors-master/kMirrors-master",
+    "com.unity.cinemachine": "2.10.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
     "com.unity.netcode.gameobjects": "1.9.1",
     "com.unity.render-pipelines.universal": "14.0.11",
     "com.unity.textmeshpro": "3.0.9",
+    "com.unity.timeline": "1.7.6",
     "com.unity.visualeffectgraph": "14.0.11",
     "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.modules.ai": "1.0.0",
