--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.kink3d.mirrors": "file:C:/Users/lorel/Downloads/kMirrors-master/kMirrors-master",
+    "com.kink3d.mirrors": "https://github.com/Kink3d/kMirrors.git",
     "com.unity.cinemachine": "2.10.0",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
